# dapm

./: Cargo.toml  LICENSE  json-schema.json  prompt.md
src/: app.rs  cli.rs  dialog.rs  main.rs  ollama.rs  ui.rs
